--- a/settings/view.ejs
+++ b/settings/view.ejs
@@ -29,7 +29,7 @@
 <body>
     <div id="container">
         <h1>Hello Word!</h1>
-        <h2>A siple aplication express</h2>
+        <h2>A simple aplication express</h2>
     </div>
 </body>
 </html>
